crates/compiler/mir/src/ir_generation/tests/snapshots/cairo_m_compiler_mir__ir_generation__tests__mir_generation_tests__control_flow_simple_while.snap
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: simple_while.cm
============================================================
Source code:
func test_simple_while() -> felt {
    let i = 0;
    let sum = 0;

    while (i != 10) {
        sum = sum + i;
        i = i + 1;
    }

    return sum;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test_simple_while {
    entry: 0

    0:
      %0 = stackalloc 1
      store %0, 0
      %1 = stackalloc 1
      store %1, 0
      jump 1

    1:
      if %0 Neq 10 then jump 2 else jump 3

    2:
      %1 = %1 Add %0
      %0 = %0 Add 1
      jump 1

    3:
      return %1

  }

}
