crates/compiler/mir/src/ir_generation/tests/snapshots/cairo_m_compiler_mir__ir_generation__tests__mir_generation_tests__control_flow_unreachable_after_return.snap
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: unreachable_after_return.cm
============================================================
Source code:
//!ASSERT NOT_CONTAINS: store %0, 99
//!ASSERT NOT_CONTAINS: Unreachable code

// Tests that code generation stops after a `return` statement.
fn test() -> felt {
    return 42;

    // This code should not appear in the MIR.
    let x = 99; // Unreachable code
    return x;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test {
    entry: 0

    0:
      return 42

  }

}
