crates/compiler/mir/src/ir_generation/tests/snapshots/cairo_m_compiler_mir__ir_generation__tests__mir_generation_tests__expressions_binary_ops.snap
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: binary_ops.cm
============================================================
Source code:
//!ASSERT CONTAINS: Add
//!ASSERT CONTAINS: Mul
//!ASSERT CONTAINS: Eq

// Tests various binary operations.
func test_add(a: felt, b: felt) -> felt {
    let c = a + b;
    return c;
}

func test_mul(a: felt, b: felt) -> felt {
    let c = a * b;
    return c;
}

func test_sub(a: felt, b: felt) -> felt {
    let c = a - b;
    return c;
}

func test_div(a: felt, b: felt) -> felt {
    let c = a / b;
    return c;
}

func test_eq(a: felt, b: felt) -> felt {
    let c = a == b;
    return c;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test_add {
    parameters: [0, 1]
    entry: 0

    0:
      %2 = stackalloc 1
      %2 = %0 Add %1
      return %2

  }

  // Function 1
  fn test_mul {
    parameters: [0, 1]
    entry: 0

    0:
      %2 = stackalloc 1
      %2 = %0 Mul %1
      return %2

  }

  // Function 2
  fn test_sub {
    parameters: [0, 1]
    entry: 0

    0:
      %2 = stackalloc 1
      %2 = %0 Sub %1
      return %2

  }

  // Function 3
  fn test_div {
    parameters: [0, 1]
    entry: 0

    0:
      %2 = stackalloc 1
      %2 = %0 Div %1
      return %2

  }

  // Function 4
  fn test_eq {
    parameters: [0, 1]
    entry: 0

    0:
      %2 = stackalloc 1
      %2 = %0 Eq %1
      return %2

  }

}
