crates/compiler/mir/src/ir_generation/tests/snapshots/cairo_m_compiler_mir__ir_generation__tests__mir_generation_tests__expressions_combination.snap
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: combination.cm
============================================================
Source code:
fn main(){
    let x = 3;
    let y = 13;
    let even_number = 16;
    let eq = x == y;
    let mut_val = 1;
    if (eq) {
        mut_val = mut_val + eq + 1;
    }
    mut_val = mut_val * mut_val;
    mut_val = mut_val + (even_number / 2);

    let eq2 = (x == 3);

    let compound1 = x || (y == 3) + 2;
    let compound2 = eq != 2 && 3;

    let (a, b) = foo();
    return mut_val + eq2 + a + bar() + b + compound1 + compound2;
}

fn foo() -> (felt, felt) {
    return (32, 62);
}

fn bar() -> felt {
    return 123;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn main {
    entry: 0

    0:
      %0 = stackalloc 1
      store %0, 3
      %1 = stackalloc 1
      store %1, 13
      %2 = stackalloc 1
      store %2, 16
      %3 = stackalloc 1
      %3 = %0 Eq %1
      %4 = stackalloc 1
      store %4, 1
      if %3 then jump 1 else jump 2

    1:
      %5 = %4 Add %3
      %4 = %5 Add 1
      jump 2

    2:
      %4 = %4 Mul %4
      %6 = %2 Div 2
      %4 = %4 Add %6
      %7 = stackalloc 1
      %7 = %0 Eq 3
      %8 = %1 Eq 3
      %9 = %8 Add 2
      %10 = stackalloc 1
      %10 = %0 Or %9
      %11 = %3 Neq 2
      %12 = stackalloc 1
      %12 = %11 And 3
      %13, %14 = call 1()
      %15 = %4 Add %7
      %16 = %15 Add %13
      %17 = call 2()
      %18 = %16 Add %17
      %19 = %18 Add %14
      %20 = %19 Add %10
      %21 = %20 Add %12
      return %21

  }

  // Function 1
  fn foo {
    entry: 0

    0:
      return (32, 62)

  }

  // Function 2
  fn bar {
    entry: 0

    0:
      return 123

  }

}
