crates/compiler/mir/src/ir_generation/tests/snapshots/cairo_m_compiler_mir__ir_generation__tests__mir_generation_tests__expressions_tuple_destructuring.snap
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: tuple_destructuring.cm
============================================================
Source code:
// Test tuple destructuring in MIR generation

func test_basic_tuple_destructuring() -> felt {
    let (x, y) = (10, 20);
    return x + y;
}

func get_pair() -> (felt, felt) {
    return (100, 200);
}

func test_tuple_destructuring_from_function() -> felt {
    let (a, b) = get_pair();
    return a + b;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test_basic_tuple_destructuring {
    entry: 0

    0:
      %0 = stackalloc 1
      store %0, 10
      %1 = stackalloc 1
      store %1, 20
      %2 = %0 Add %1
      return %2

  }

  // Function 1
  fn get_pair {
    entry: 0

    0:
      return (100, 200)

  }

  // Function 2
  fn test_tuple_destructuring_from_function {
    entry: 0

    0:
      %0, %1 = call 1()
      %2 = %0 Add %1
      return %2

  }

}
